added testcases, profiles(application.yml) and few other fixes